syntax = "proto3";

package service;

option go_package = "go-grpc-server-client/proto";

// 서비스 정의
service UserService {
  // 사용자 정보 조회
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  
  // 사용자 목록 조회
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  
  // 사용자 생성
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  
  // 사용자 정보 업데이트
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  
  // 사용자 삭제
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

// 사용자 정보
message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  string created_at = 5;
  string updated_at = 6;
}

// GetUser 요청
message GetUserRequest {
  int32 id = 1;
}

// GetUser 응답
message GetUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

// ListUsers 요청
message ListUsersRequest {
  int32 page = 1;
  int32 limit = 2;
}

// ListUsers 응답
message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  bool success = 3;
  string message = 4;
}

// CreateUser 요청
message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32 age = 3;
}

// CreateUser 응답
message CreateUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

// UpdateUser 요청
message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
}

// UpdateUser 응답
message UpdateUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

// DeleteUser 요청
message DeleteUserRequest {
  int32 id = 1;
}

// DeleteUser 응답
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
} 